src/Components/Common/Sidebar/Sidebar.module.scss
.sidebar {
  @apply fixed left-0 top-0 flex flex-col;
  z-index: 3;
  height: 100vh;
  background-color: var(--red);
  width: 20%;
  padding: 45px 18px;
  // overflow: auto;
  &__list {
    margin-top: 46px;
    flex: 1;
    overflow: auto;
  }
  &__header {
    @apply text-center;
    h2 {
      font-weight: 600;
      margin-bottom: 8px;
    }
    p {
      color: #f5f5f5;
    }
  }
}
.be_logo {
  @apply mx-auto;
  margin-top: 46px;
  width: 139px;
  img {
    width: 139px;
  }
}

